# Zephyr-Source-Build

./: .gitignore  01-install-deps.ps1  01-install-deps.sh  02-setup-venv.ps1  02-setup-venv.sh  03-init-west.ps1  03-init-west.sh  04-install-sdk.ps1  04-install-sdk.sh  05-build-sample.ps1  ActivatePyEnvZWS.sh  LICENSE.md  Linux-README.md  README.md  Setup_Zephyr_Project_SDK.ps1  Virtual_Drive_Attach.ps1  west.yml  zephyr_setup.sh
APPS/uart_stream_processor/: CMakeLists.txt  FLOW_README.rst  README.rst
APPS/uart_stream_processor/lib/: CMakeLists.txt
APPS/uart_stream_processor/lib/include/: circular_buffer.h  static_memory_pool.h
APPS/uart_stream_processor/lib/src/: circular_buffer.c  static_memory_pool.c
APPS/uart_stream_processor/src/: main.c
APPS/zephyr_internals/: CMakeLists.txt  prj.conf  sample.yaml
APPS/zephyr_internals/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
APPS/zephyr_internals/src/: main.c
SmartAppliance/: prj.conf  vara.md
SmartAppliance/boards/: native_sim.overlay
SmartAppliance/src/custom/: custom.c  custom.h  lv_conf_ext.h  ui_Aircon.c  ui_Aircon.h  ui_Oven.c  ui_Oven.h
ThreadSynchronization/: CMakeLists.txt  prj.conf  vara.md
ThreadSynchronization/src/: main.c
Zephyr_Internals/: CMakeLists.txt  README.rst  prj.conf
Zephyr_Internals/src/: main.c
linux/: build-sample.sh  init-west.sh
linux-setup/: 01-install-deps.sh  02-setup-venv.sh  03-init-west.sh  04-install-sdk.sh  README.md
